--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "electron": "^35.0.1"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.13.0",
+    "ssh2": "^1.16.0",
     "update-electron-app": "^3.1.1"
   }
 }
