增加 win 包生成脚本

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build:win": "electron-builder --win"
   },
   "author": "",
   "license": "ISC",
@@ -20,15 +21,24 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "^35.0.1"
+    "electron": "^35.0.1",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
-    "element-ui": "^2.15.14",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.13.0",
-    "ssh2": "^1.16.0",
     "update-electron-app": "^3.1.1"
+  },
+  "build": {
+    "appId": "com.example.myapp",
+    "productName": "MyApp",
+    "directories": {
+      "output": "dist" 
+    },
+    "win": {
+      "target": ["nsis"], 
+      "icon": "build/icon.ico" 
+    },
+    "extraResources": [""] 
   }
 }
