--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron/fuses": "^1.8.0",
+    "@types/serialport": "^8.0.5",
     "electron": "^35.0.1",
-    "electron-builder": "^25.1.8"
+    "electron-builder": "^25.1.8",
+    "serialport": "^13.0.0"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -33,12 +35,16 @@
     "appId": "com.example.myapp",
     "productName": "MyApp",
     "directories": {
-      "output": "dist" 
+      "output": "dist"
     },
     "win": {
-      "target": ["nsis"], 
-      "icon": "build/icon.ico" 
+      "target": [
+        "nsis"
+      ],
+      "icon": "build/icon.ico"
     },
-    "extraResources": [""] 
+    "extraResources": [
+      ""
+    ]
   }
 }
