--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
+    "element-ui": "^2.15.14",
     "update-electron-app": "^3.1.1"
   },
   "build": {
